Fix textarea border color, and out of place border colors in DismissableMessage and DismissableNotification

--- a/src/global_styl/global.css
+++ b/src/global_styl/global.css
@@ -189,6 +189,7 @@ input, select, textarea {
 
 textarea {
     border: 1px solid transparent;
+    border-color: var(--input-border);
     padding: 0.3rem;
 }
 
